# koregraph

./: .dockerignore  .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pickle_creation.py  pyproject.toml
.github/workflows/: static.yml
documentation/: datasets.md
documentation/pages/: index.html
examples/: load_keypoints.py  main.py  noise_reduction.py
frontend/views/: presentation.ipynb
koregraph/: params.py
koregraph/api/: audio_proc.py  chunks.py  chunks_api.py  music_to_numpy.py  posture_proc.py  prepare_dataset.py  spectogram.py
koregraph/api/environment/: training_cloud.py
koregraph/api/evaluating/: loss.py
koregraph/api/machine_learning/: callbacks.py  chore_workflow.py  custom_loss.py  load_dataset.py  loss.py  losses.py  model_list.txt  neural_network.py  pickle_creation.py  pickle_creation_interpolated.py  prediction_workflow.py  sound_creation.py  workflow.py
koregraph/api/machine_learning/train_workflow/: chunks_workflow.py  next_chunks_workflow.py  workflow.py
koregraph/api/preprocessing/: audio_preprocessing.py  audio_proc.py  chunks.py  chunks_api.py  dataset_preprocessing.py  interpolation.py  music_to_numpy.py  music_to_numpy_interpolated.py  posture_preprocessing.py  posture_proc.py  prepare_dataset.py
koregraph/api/training/: chunks_workflow.py  next_chunks_workflow.py  seventeen_output_workflow.py  train_workflow.py
koregraph/cli/: chunk.py  chunk_command.py  dataset.py  evaluate.py  generate_features.py  model.py  predict.py  preprocess.py  viewer.py
koregraph/config/: __init__.py  environment.py  logs.py  mlflow_config.py  params.py
koregraph/managers/: audio.py  choregraphy.py
koregraph/models/: aist_file.py  choregraphy.py  constants.py  posture.py  train_file.py  types.py
koregraph/models/storage/: __init__.py  file_storage_interface.py  file_storage_store.py  gcloud_file_storage.py  local_file_storage.py
koregraph/tools/: choregraphy_to_chunks.py  spectogram.py  video_builder.py  visualization_3d.py
koregraph/utils/: choregraphies.py  models.py  musics.py  params.py  pickle.py  pickles.py  preproc.py  storage.py
koregraph/utils/cloud/: cloud_bucket.py  load_dataset.py
koregraph/utils/controllers/: cameras.py  choregraphies.py  musics.py
mlruns/0/: meta.yaml
notebook/: all_advanced_move_names.csv  chore_per_song.csv
